<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAB40"
    tools:context=".QuizTime">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#F57F17"
        android:clickable="false"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="159dp"
        android:layout_height="106dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="#1A237E"
        android:textSize="96sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="171dp"
        android:layout_height="69dp"
        android:text="@string/math"
        android:textAlignment="center"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="273dp" />

    <EditText
        android:id="@+id/response"
        android:layout_width="211dp"
        android:layout_height="69dp"
        android:layout_marginStart="1dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/equation"
        tools:layout_editor_absoluteY="273dp" />

</androidx.constraintlayout.widget.ConstraintLayout>